[tool.poetry]
name = "vietfin"
version = "0.1.0"
description = "Python package to fetch Vietnam stock market data"
authors = ["Huy <vietfin.numbness179@simplelogin.fr>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/vietfin/vietfin"
homepage = "https://github.com/vietfin/vietfin"
documentation = "https://github.com/vietfin/vietfin"
keywords = ["vietnam", "stock", "market", "data", "finance", "etf", "investment", "funds"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    ]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"  # needed to validate data
pandas = "^2.1.4"  # needed to manipulate data
requests = "^2.31.0"  # needed to fetch data from web
pyarrow = "^14.0.2"  # enable pandas to use pyarrow backend
bs4 = "^0.0.2"  # needed to parse html
openpyxl = "^3.1.2"  # read excel file
polars = "^0.20.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"  # needed to run tests
pytest-cov = "^4.1.0"
ruff = "^0.1.11"  # needed to format code
mypy = "^1.8.0"  # needed to type hint code
ipykernel = "^6.28.0"  # needed to test command in jupyter notebooks
pandas-stubs = "^2.1.4.231227"  # needed for mypy to type hint pandas
types-requests = "^2.31.0.20240106"  # needed for mypy to type hint requests
types-beautifulsoup4 = "^4.12.0.20240106"  # needed for mypy to type hint bs4

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"  # needed to generate documentation website
shibuya = "^2024.1.17"  # custom theme for sphinx
myst-parser = "^2.0.0"  # enable sphinx to parse Markdown
# myst-nb = "^1.0.0"  # enable sphinx to parse Markdown, MyST, and Jupyter Notebook files
sphinx-copybutton = "^0.5.2"  # add copy button to Sphinx documentation.
sphinxcontrib-mermaid = "^0.9.2"  # add mermaid diagrams to Sphinx documentation.
# furo = "^2024.1.29"  # custom theme for sphinx
sphinx-sitemap = "^2.5.1"  # add sitemap to Sphinx docs
nbsphinx = "^0.9.3"  # enable sphinx to parse Jupyter notebooks
sphinx-hoverxref = "^1.3.0"  # add hover to cross-reference in Sphinx docs
sphinx-design = "^0.5.0"  # add responsive web components to Sphinx docs, replace sphinx-togglebutton and sphinx-inline-tabs

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# max char per line
line-length = 80

# indent with 4 spaces
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.format]
# use double quote for strings.
quote-style = "double"

# indent with spaces, rather than tabs.
indent-style = "space"

# automatically detect the appropriate line ending.
line-ending = "auto"